homebrew_challenge/src/components/RouteMapRules/RouteMapRules.css
.route-map-rules {
  color: #133a53;
}

.route-map-link {
  text-decoration: none;
  color: #133a53;
}

#lockdown.active,
#phase-1.active,
#phase-2.active,
#phase-3.active,
#phase-4.active {
  background-color: #319bd5;
  border: none;
  border-radius: 0;
}

#lockdown,
#phase-1,
#phase-2,
#phase-3,
#phase-4 {
  background-color: #fff;
  color: #133a53;
  border:none;
  border-radius: 0;
}

.category-image {
  height: 80px;
}

.category-card {
  width: 100%;
  border: 1px solid LightGray;
  padding: 10px;
  margin: 0 5px;
}

.select-phase {
  margin: 0;
  border: 1px solid LightGray;
}

.current-phase {
  text-align: center;
  font-weight: bold;
  padding: 20px;
  margin-bottom: 10px;
  background-color: #133a53;
  color: #fff;
}

